添加注册功能1

--- a/clientapp/src/main/res/values/colors.xml
+++ b/clientapp/src/main/res/values/colors.xml
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#4db8c4</color>
+    <color name="colorPrimaryDark">#328e9c</color>
+    <color name="colorAccent">#4db8c4</color>
+    <color name="colorWindowBackground">#FFFFFF</color>
+
+    <color name="colorText">#444444</color>
+
+    <!-- 描边颜色 -->
+    <color name="border_clo">#ccc</color>
+    <color name="text_clo">#333</color>
+    <color name="white">#fff</color>
+    <color name="blue">#419DE4</color>
+
+    <color name="theme">#4db8c4</color>
+    <color name="colorLightBlue">#dbf1f3</color>
+    <color name="colorBackivory">#f1f7f8</color>
+
+    <!-- skin color -->
+    <color name="colorTest">#434343</color>
+
+    <!--lecture-->
+    <color name="text_normal">#FF4081</color>
+    <color name="text_press">#bbFF4081</color>
+    <color name="control_bar_bg">#77000000</color>
 </resources>
