--- a/clientapp/src/main/res/layout/activity_login_by_password.xml
+++ b/clientapp/src/main/res/layout/activity_login_by_password.xml
@@ -7,7 +7,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:background="@color/white"
-    tools:context=".activity.loginandregister.LoginActivity">
+    tools:context=".activity.loginandregister.LoginByPasswordActivity">
 
     <RelativeLayout style="@style/topbar_bg">
 
@@ -16,7 +16,7 @@
         <TextView
             style="@style/topbar_title"
             android:layout_centerHorizontal="true"
-            android:text="验证码登录" />
+            android:text="密码登录" />
         <Button
             android:id="@+id/btn_to_register"
             style="@style/topbar_right_btn"
@@ -93,7 +93,7 @@
                         android:id="@+id/register_checkcode_edit"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/prompt_check_code"
+                        android:hint="@string/prompt_password"
                         android:layout_gravity="center_vertical"
                         android:inputType="textEmailAddress"
                         android:layout_marginLeft="20sp"
@@ -109,7 +109,7 @@
             </LinearLayout>
 
 
-            <Button
+<!--            <Button
                 android:id="@+id/register_check_code_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
@@ -119,7 +119,7 @@
                 android:textStyle="bold"
                 android:background="@drawable/login_logbutton"
                 android:layout_gravity="center"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"/>-->
 
             <Button
                 android:id="@+id/register_button"
@@ -134,13 +134,13 @@
                 />
 
             <TextView
-                android:id="@+id/tv_password_login"
+                android:id="@+id/tv_code_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="20sp"
                 android:enabled="true"
-                android:text="@string/action_password_login"
+                android:text="@string/action_code_login"
                 android:textColor="@color/theme" />
         </LinearLayout>
     </ScrollView>
