--- a/clientapp/src/main/res/layout/activity_main.xml
+++ b/clientapp/src/main/res/layout/activity_main.xml
@@ -6,13 +6,57 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
-    <TextView
+
+    <Button
+        android:id="@+id/btn_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="设置"
+        tools:layout_editor_absoluteX="15dp"
+        tools:layout_editor_absoluteY="7dp" />
 
+    <Button
+        android:id="@+id/btn_video_chat"
+        android:layout_width="wrap_content"
+        android:layout_height="52dp"
+        android:layout_marginTop="16dp"
+        android:text="视频通话"
+        app:layout_constraintTop_toBottomOf="@+id/btn_register"
+        tools:layout_editor_absoluteX="14dp" />
+
+    <Button
+        android:id="@+id/btn_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="注册"
+        app:layout_constraintTop_toBottomOf="@+id/btn_setting"
+        tools:layout_editor_absoluteX="14dp" />
+
+    <Button
+        android:id="@+id/btn_player"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="音视频播放"
+        app:layout_constraintTop_toBottomOf="@+id/btn_video_chat"
+        tools:layout_editor_absoluteX="16dp" />
+
+    <Button
+        android:id="@+id/btn_feed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="投食"
+        app:layout_constraintTop_toBottomOf="@+id/btn_player"
+        tools:layout_editor_absoluteX="15dp" />
+
+    <Button
+        android:id="@+id/btn_cruise"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="巡航"
+        app:layout_constraintTop_toBottomOf="@+id/btn_feed"
+        tools:layout_editor_absoluteX="14dp" />
 </android.support.constraint.ConstraintLayout>
