--- a/clientapp/src/main/res/layout/activity_login_by_password.xml
+++ b/clientapp/src/main/res/layout/activity_login_by_password.xml
@@ -90,17 +90,17 @@
                     >
 
                     <EditText
-                        android:id="@+id/register_checkcode_edit"
+                        android:id="@+id/login_password_edit"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/prompt_password"
                         android:layout_gravity="center_vertical"
-                        android:inputType="textEmailAddress"
                         android:layout_marginLeft="20sp"
                         android:layout_marginRight="20sp"
-                        android:textColor="@color/theme"
                         android:background="@null"
+                        android:hint="@string/prompt_password"
+                        android:inputType="textEmailAddress"
                         android:textAlignment="center"
+                        android:textColor="@color/theme"
 
                         />
                 </android.support.design.widget.TextInputLayout>
@@ -122,13 +122,13 @@
                 android:textColor="@color/white"/>-->
 
             <Button
-                android:id="@+id/register_button"
+                android:id="@+id/login_bypassword_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="40sp"
                 android:layout_height="30sp"
                 android:layout_gravity="center_horizontal"
-                android:clickable="false"
-                android:enabled="false"
+                android:clickable="true"
+                android:enabled="true"
                 android:layout_margin="20sp"
                 android:background="@drawable/register_rightlog"
                 />
