--- a/robotapp/src/main/res/layout/activity_main.xml
+++ b/robotapp/src/main/res/layout/activity_main.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="设置"
@@ -20,7 +20,7 @@
         android:layout_width="152dp"
         android:layout_height="150dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/btn_setting"
         app:srcCompat="@drawable/aiwac"
         tools:layout_editor_absoluteX="0dp" />
 </android.support.constraint.ConstraintLayout>
