--- a/robotapp/src/main/res/values/colors.xml
+++ b/robotapp/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="theme">#4db8c4</color>
+    <color name="control_bar_bg">#77000000</color>
 </resources>
