完成修改密码的功能

--- a/clientapp/src/main/res/layout/activity_change_password.xml
+++ b/clientapp/src/main/res/layout/activity_change_password.xml
@@ -7,19 +7,17 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:background="@color/white"
-    tools:context=".activity.loginandregister.RegisterCodeActivity">
-    <RelativeLayout style="@style/topbar_bg">
+    tools:context=".activity.setting.ChangePasswordActivity">
+
+    <RelativeLayout style="@style/topbar_bg"
+        tools:ignore="MissingConstraints">
 
         <ImageButton style="@style/topbar_return_img" />
 
         <TextView
             style="@style/topbar_title"
             android:layout_centerHorizontal="true"
-            android:text="注册" />
-        <Button
-            android:id="@+id/btn_to_login"
-            style="@style/topbar_right_btn"
-            android:text="登录" />
+            android:text="修改密码" />
     </RelativeLayout>
 
     <ScrollView
@@ -50,6 +48,8 @@
                 android:layout_height="40sp"
                 android:layout_marginBottom="20sp"
                 android:background="@drawable/register_account_bg"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 >
 
                 <AutoCompleteTextView
@@ -121,7 +121,7 @@
                     android:layout_marginLeft="20sp"
                     android:layout_marginRight="20sp"
                     android:background="@null"
-                    android:hint="@string/prompt_password"
+                    android:hint="@string/prompt_new_password"
                     android:inputType="textEmailAddress"
                     android:textAlignment="center"
                     android:textColor="@color/theme"
@@ -154,5 +154,4 @@
                 />
         </LinearLayout>
     </ScrollView>
-
 </LinearLayout>
