--- a/clientapp/src/main/res/layout/activity_login_by_password.xml
+++ b/clientapp/src/main/res/layout/activity_login_by_password.xml
@@ -54,7 +54,7 @@
                 >
 
                 <AutoCompleteTextView
-                    android:id="@+id/register_number_edit"
+                    android:id="@+id/change_password_number_edit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_number"
@@ -76,7 +76,7 @@
 
 
 
-            <LinearLayout android:id="@+id/regiter_btn_form"
+            <LinearLayout android:id="@+id/change_password_btn_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
