--- a/clientapp/src/main/res/layout/audi_video_gridview_item.xml
+++ b/clientapp/src/main/res/layout/audi_video_gridview_item.xml
@@ -28,13 +28,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lecture_gridview_name"
-        android:text="讲座名称"
+        android:text="音视频名称"
         android:gravity  ="center_vertical|center_horizontal"
         android:layout_marginRight="15dp"
         android:layout_marginLeft="15dp"
         android:singleLine="true"
         android:ellipsize="marquee"
-
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lecture_gridview_describe"
+        android:text="音视频简介"
+        android:gravity  ="center_vertical|center_horizontal"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:singleLine="true"
+        android:ellipsize="marquee"
         />
 
 </LinearLayout>
