--- a/clientapp/src/main/res/layout/activity_video_chat_view.xml
+++ b/clientapp/src/main/res/layout/activity_video_chat_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_video_chat_view"
     android:layout_width="match_parent"
@@ -31,7 +32,27 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:orientation="vertical">
 
-        <TextView
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            >
+
+            <me.caibou.rockerview.DirectionView
+                android:id="@+id/direct_control"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+
+                app:button_outside_circle_radius="60dp"
+                app:button_side_width="40dp"
+                app:edge_radius="65dp"
+                app:indicator_color="#f52504" />
+        </RelativeLayout>
+
+
+<!--        <TextView
             android:id="@+id/quick_tips_when_use_agora_sdk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -39,7 +60,7 @@
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:gravity="center_vertical|start"
-            android:text="1. Default channel name is demoChannel1\n2. Waiting for remote users\n3. This demo only supports 1v1 video calling" />
+            android:text="1. Default channel name is demoChannel1\n2. Waiting for remote users\n3. This demo only supports 1v1 video calling" />-->
 
         <LinearLayout
             android:layout_width="match_parent"
