--- a/clientapp/src/main/res/layout/activity_video_detail.xml
+++ b/clientapp/src/main/res/layout/activity_video_detail.xml
@@ -85,22 +85,7 @@
                             android:layout_marginRight="10dp"
                             android:layout_marginBottom="10dp"
                             android:src="@drawable/login_aiwac_log" />
-
-                        <Button
-                            android:id="@+id/buttonPlayPause"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_marginBottom="10dp"
-                            android:background="@drawable/buttonplay_pause"/>
-
                     </FrameLayout>
-
-
-
-
 
 
                     <LinearLayout
@@ -108,6 +93,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:orientation="vertical">
+
 
                         <!--音视频讲名称-->
                         <TextView
@@ -127,53 +113,55 @@
                             android:focusable="true"
                             android:focusableInTouchMode="true"
                             />
-
+                        <!--音视频讲座描述-->
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_gravity = "bottom"
-                            android:orientation="horizontal">
+                            android:layout_height="100dp">
 
                             <TextView
-                                android:id="@+id/lecture_duration"
-                                android:layout_width="0dp"
+                                android:id="@+id/lecture_description"
+                                android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:layout_weight="2"
-                                android:gravity="center_horizontal|center_vertical"
-                                android:text="视频时长" />
-
-                            <TextView
-                                android:id="@+id/lecture_update_time"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="3"
-                                android:gravity="center_horizontal|center_vertical"
-                                android:text="视频更新时间" />
+                                android:scrollbars="vertical"
+                                android:text="description"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginLeft="10dp"
+                                android:layout_marginRight="10dp"
+                                android:background="@drawable/textviewkeil"/>
 
                         </LinearLayout>
 
                     </LinearLayout>
-
                 </LinearLayout>
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <Button
+        android:id="@+id/buttonPlayPause"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:text ="本地播放" />
+    <Button
+        android:id="@+id/buttonPlayPause2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:text ="机器人端播放" />
 
-                <!--音视频讲座描述-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="500dp">
 
-                    <TextView
-                        android:id="@+id/lecture_description"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scrollbars="vertical"
-                        android:text="description"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/textviewkeil"/>
 
-                </LinearLayout>
+</LinearLayout>
+
+
 
 
             </LinearLayout>
