--- a/robotapp/src/main/res/layout/activity_main.xml
+++ b/robotapp/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -41,4 +41,4 @@
         android:text="视频通话"
         app:layout_constraintTop_toBottomOf="@+id/tv_mac"
         tools:layout_editor_absoluteX="16dp" />
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
