--- a/clientapp/src/main/res/layout/activity_main.xml
+++ b/clientapp/src/main/res/layout/activity_main.xml
@@ -6,14 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        style="@style/topbar_bg"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="0dp">
+
+        <TextView
+            style="@style/topbar_title"
+            android:layout_centerHorizontal="true"
+            android:text="首页" />
+    </RelativeLayout>
 
     <Button
         android:id="@+id/btn_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="设置"
-        tools:layout_editor_absoluteX="15dp"
-        tools:layout_editor_absoluteY="7dp" />
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
+        tools:layout_editor_absoluteX="15dp" />
 
     <Button
         android:id="@+id/btn_video_chat"
