视频通话界面调整，横屏适配，机器人主页标题栏调整

--- a/robotapp/src/main/res/layout/activity_main.xml
+++ b/robotapp/src/main/res/layout/activity_main.xml
@@ -6,7 +6,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".activity.MainActivity">
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        style="@style/topbar_bg"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="0dp">
 
+        <TextView
+            style="@style/topbar_title"
+            android:layout_centerHorizontal="true"
+            android:text="宠物机器人" />
+    </RelativeLayout>
 
     <Button
         android:id="@+id/btn_setting"
