--- a/clientapp/src/main/res/layout/activity_change_password.xml
+++ b/clientapp/src/main/res/layout/activity_change_password.xml
@@ -12,7 +12,8 @@
     <RelativeLayout style="@style/topbar_bg"
         tools:ignore="MissingConstraints">
 
-        <ImageButton style="@style/topbar_return_img" />
+        <ImageButton style="@style/topbar_return_img"
+            android:id="@+id/backButton"/>
 
         <TextView
             style="@style/topbar_title"
