--- a/clientapp/src/main/res/layout/activity_login_by_password.xml
+++ b/clientapp/src/main/res/layout/activity_login_by_password.xml
@@ -11,7 +11,8 @@
 
     <RelativeLayout style="@style/topbar_bg">
 
-        <ImageButton style="@style/topbar_return_img" />
+        <ImageButton style="@style/topbar_return_img"
+            android:id="@+id/backButton"/>
 
         <TextView
             style="@style/topbar_title"
