--- a/clientapp/src/main/res/layout/activity_scan_code.xml
+++ b/clientapp/src/main/res/layout/activity_scan_code.xml
@@ -9,6 +9,19 @@
     android:background="@color/colorPrimary"
     android:id="@+id/activity_scan_code"
     tools:context=".activity.setting.ScanCodeActivity">
+
+    <RelativeLayout style="@style/topbar_bg"
+        >
+
+        <ImageButton style="@style/topbar_return_img"
+            android:id="@+id/backButton"/>
+
+        <TextView
+            style="@style/topbar_title"
+            android:layout_centerHorizontal="true"
+            android:text="版本更新" />
+    </RelativeLayout>
+
     <TextView
         android:text="请扫描机器人屏幕上的二维码"
         android:layout_width="wrap_content"
