--- a/clientapp/src/main/res/layout/activity_video_chat_view.xml
+++ b/clientapp/src/main/res/layout/activity_video_chat_view.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_video_chat_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.VideoChatViewActivity">
+    tools:context=".activity.videochat.VideoChatViewActivity">
 
     <FrameLayout
         android:id="@+id/remote_video_view_container"
