--- a/clientapp/src/main/res/layout/activity_update.xml
+++ b/clientapp/src/main/res/layout/activity_update.xml
@@ -26,7 +26,7 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_margin="15dp"
-                        android:src="@drawable/ic_launcher" />
+                        android:src="@drawable/robot" />
 
                     <TextView
                         android:id="@+id/tv_app_version_text"
