--- a/clientapp/src/main/res/layout/activity_main.xml
+++ b/clientapp/src/main/res/layout/activity_main.xml
@@ -70,4 +70,13 @@
         android:text="巡航"
         app:layout_constraintTop_toBottomOf="@+id/btn_feed"
         tools:layout_editor_absoluteX="14dp" />
+
+    <Button
+        android:id="@+id/btn_control_robot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="控制机器人"
+        app:layout_constraintTop_toBottomOf="@+id/btn_cruise"
+        tools:layout_editor_absoluteX="14dp" />
 </android.support.constraint.ConstraintLayout>
