修改部分错误，开始运动模块的设计

--- a/clientapp/src/main/res/layout/activity_scan_code.xml
+++ b/clientapp/src/main/res/layout/activity_scan_code.xml
@@ -19,7 +19,7 @@
         <TextView
             style="@style/topbar_title"
             android:layout_centerHorizontal="true"
-            android:text="版本更新" />
+            android:text="扫描二维码" />
     </RelativeLayout>
 
     <TextView
